# ncatbot

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.yaml  main.py  pyproject.toml  release-notes.md  tox.ini
.agents/scripts/: check_doc_consistency.py  fix_code_blocks.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pypi-publish-manual.yml  pypi-publish.yml  pytest.yml
docs/: 11-开发环境与发布规范.md  README.md  architecture.md
docs/api/: BestPractice.md  ForwardMessage.md  MessageArray.md  MessageSegment.md  rbac_manager.md
docs/config/: ConfigAndStartup.md
docs/contributing/: README.md
docs/guide/: README.md
docs/meta/: README.md
docs/plugin_system/: TestPlugin测试指南.md  Testing-快速参考-函数版.md  Testing.md  UnifiedRegistry-快速开始.md  UnifiedRegistry-过滤器系统.md
docs/reference/: README.md  cli.md
docs/testing/: README.md  api-reference.md  best-practice-simple.md  best-practice-unittest.md  guide.md  quick-start.md
examples/: README.md  run_test.py
examples/config/: test_config.py
examples/testing/: README.md
examples/tutorial/: poke.py
examples/unified_registry/: README.md  __init__.py  best_practices_examples.py  command_system_examples.py  filters_examples.py  params_examples.py  real_world_cases_examples.py  test_readme.py  testing_guide_examples.py
ncatbot/: __init__.py
ncatbot/api/: _sugar.py  client.py
ncatbot/app/: client.py
ncatbot/cli/: main.py
ncatbot/core/: __init__.py  client.py
ncatbot/event/: __init__.py
tests/: README.md  test_app.py  test_smoke.py
(+621 files in other folders)
