[project]
name = "ncatbot"
version = "0.1.0"
description = "A generic async bot framework built around pluggable adapters and event streams."
readme = "README.md"
authors = [
    { name = "faithleysath", email = "faithleysath@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "napcat-sdk>=0.6.8",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
